@@ -3,12 +3,16 @@
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
     This provides an example of using Flask-Restless on the server side to
-    provide a ReSTful API and the Python `requests <>`_ library on the client
-    side to make HTTP requests to the server.
+    provide a ReSTful API and the Python `requests
+    <http://docs.python-requests.org/en/latest/>`_ library on the client side
+    to make HTTP requests to the server.
 
     To install the requests library::
 
-        pip install requests
+        pip install "requests>1.0.3"
+
+    (If you have ``requests`` version less then 1.0.3, just change the code
+    below from ``requests.json()`` to ``requests.json``).
 
     Before executing the code in this module, you must first run the quickstart
     server example from this directory (that is, the ``examples/`` directory)::
@@ -41,9 +45,17 @@ assert response.status_code == 201
 # Make a GET request for the entire collection.
 response = requests.get(url, headers=headers)
 assert response.status_code == 200
-print response.json())
+print(response.json())
 
 # Make a GET request for an individual instance of the model.
 response = requests.get(url + '/1', headers=headers)
+assert response.status_code == 200
+print(response.json())
+
+# Use query parameters to make a search. Make sure to convert the value of `q`
+# to a string.
+filters = [dict(name='name', op='like', val='%y%')]
+params = dict(q=json.dumps(dict(filters=filters)))
+response = requests.get(url, params=params, headers=headers)
 assert response.status_code == 200
 print(response.json())
